deploy: 9149f5d89be0272113bb31e0f680bf214143cf12

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   <div class="grid">
     
         <div class="card">
+          <a href="games/snake/index.html" target="_blank">snake</a>
+        </div>
+        <div class="card">
           <a href="games/wbwwb/index.html" target="_blank">wbwwb</a>
         </div>
   </div>
