deploy: 3fd264d866ad32ddd7a24cf9ca9e5834828d6f5b

--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
 
   <div class="grid">
     
+        <div class="card" onclick="openGame('games/1v1.lol/index.html')">
+          <div class="thumb"></div>
+          <div>1v1.lol</div>
+        </div>
+      
         <div class="card" onclick="openGame('games/snake/index.html')">
           <img class="thumb" src="games/snake/thumbnail.png" alt="snake thumbnail">
           <div>snake</div>
