deploy: 360e30ce6a0b7ee99e6d3e97debb5220732bb26e

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   <div class="grid">
     
         <div class="card" onclick="openGame('games/1v1.lol/index.html')">
-          <div class="thumb"></div>
+          <img class="thumb" src="games/1v1.lol/thumbnail.png" alt="1v1.lol thumbnail">
           <div>1v1.lol</div>
         </div>
       
