deploy: bfa7e3d6d2615ab190063fe6e99bb6d6c1b3d0bd

--- a/index.html
+++ b/index.html
@@ -111,6 +111,11 @@
           <div>1v1.lol</div>
         </div>
       
+        <div class="card" onclick="openGame('games/Age Of War/index.html')">
+          <div class="thumb"></div>
+          <div>Age Of War</div>
+        </div>
+      
   </div>
 
   <script>
