deploy: 0e46afadf6375d41cab15911fe5de5bd7dcefef4

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
       
         <div class="card" onclick="openGame('games/Age Of War/index.html')">
-          <div class="thumb"></div>
+          <img class="thumb" src="games/Age Of War/thumbnail.png" alt="Age Of War thumbnail">
           <div>Age Of War</div>
         </div>
       
