deploy: 157b3d5fd3424daceaa3591844d63e638c47ef9e

--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
           <div>Age Of War</div>
         </div>
       
+        <div class="card" onclick="openGame('games/Among Us/index.html')">
+          <div class="thumb"></div>
+          <div>Among Us</div>
+        </div>
+      
   </div>
 
   <script>
