deploy: 7a76bb2cdf5a514401ecf3434cade33d12687aeb

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </div>
       
         <div class="card" onclick="openGame('games/Among Us/index.html')">
-          <div class="thumb"></div>
+          <img class="thumb" src="games/Among Us/thumbnail.jpg" alt="Among Us thumbnail">
           <div>Among Us</div>
         </div>
       
