--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
           <div>Among Us</div>
         </div>
       
+        <div class="card" onclick="openGame('games/Backrooms/index.html')">
+          <div class="thumb"></div>
+          <div>Backrooms</div>
+        </div>
+      
   </div>
 
   <script>
