--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div>
       
         <div class="card" onclick="openGame('games/Backrooms/index.html')">
-          <div class="thumb"></div>
+          <img class="thumb" src="games/Backrooms/thumbnail.jpg" alt="Backrooms thumbnail">
           <div>Backrooms</div>
         </div>
       
