deploy: 73d376633185f8c9f7d95944deb5110dbb517984

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div>
       
         <div class="card" onclick="openGame('games/Backrooms/index.html')">
-          <img class="thumb" src="games/Backrooms/thumbnail.jpg" alt="Backrooms thumbnail">
+          <div class="thumb"></div>
           <div>Backrooms</div>
         </div>
       
