deploy: 9c0933b92d4fa0a120f3e7719eba15a79b05d7ae

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </div>
       
         <div class="card" onclick="openGame('games/Baldi’s Basics/index.html')">
-          <div class="thumb"></div>
+          <img class="thumb" src="games/Baldi’s Basics/thumbnail.png" alt="Baldi’s Basics thumbnail">
           <div>Baldi’s Basics</div>
         </div>
       
