deploy: 20060b4684db1c33fa6d25847e712f2da82d85c4

--- a/index.html
+++ b/index.html
@@ -131,6 +131,11 @@
           <div>Baldi’s Basics</div>
         </div>
       
+        <div class="card" onclick="openGame('games/Basket Random/index.html')">
+          <div class="thumb"></div>
+          <div>Basket Random</div>
+        </div>
+      
   </div>
 
   <script>
