--- a/index.template.html
+++ b/index.template.html
@@ -5,24 +5,139 @@
   <title>Arcade</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-    :root{--gap:1.2rem;--card:280px}
-    *{box-sizing:border-box}
-    body{font-family:system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;background:#111;color:#eee;margin:0;padding:2rem}
-    h1{text-align:center;margin-bottom:2rem}
-    .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(var(--card),1fr));gap:var(--gap)}
-    .card{background:#222;border-radius:8px;overflow:hidden;cursor:pointer;transition:transform .2s}
-    .card:hover{transform:scale(1.04)}
-    .card img{width:100%;height:auto;display:block}
-    .card h3{margin:.7rem .9rem 0;font-size:1.1rem}
-    #play{position:fixed;inset:0;background:#000;display:none;flex-direction:column}
-    #play menu{background:#222;padding:.5rem;display:flex;align-items:center;gap:.5rem}
-    #play button{border:none;padding:.4rem .8rem;background:#444;color:#fff;border-radius:4px;cursor:pointer}
-    #play iframe{flex:1;border:0;width:100%;height:100%}
+    :root {
+      --bg: #1a1126;
+      --card: #2b1b3f;
+      --highlight: #7d4cff;
+      --text: #eee;
+      --gap: 1.2rem;
+      --card-width: 260px;
+    }
+    * { box-sizing: border-box; }
+    body {
+      font-family: system-ui, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+      background: var(--bg);
+      color: var(--text);
+      margin: 0;
+      display: flex;
+      min-height: 100vh;
+    }
+
+    /* Sidebar */
+    .sidebar {
+      width: 240px;
+      background: #221631;
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+    .sidebar img.logo {
+      max-width: 100%;
+      margin-bottom: 1rem;
+    }
+    .sidebar h2 {
+      margin: 0 0 0.5rem;
+      font-size: 1rem;
+      color: var(--highlight);
+    }
+    .category-list button {
+      background: none;
+      border: none;
+      color: var(--text);
+      text-align: left;
+      font-size: 0.95rem;
+      padding: 0.4rem 0;
+      cursor: pointer;
+      width: 100%;
+    }
+    .category-list button:hover,
+    .category-list button.active {
+      color: var(--highlight);
+    }
+
+    main {
+      flex: 1;
+      padding: 2rem;
+      overflow-y: auto;
+    }
+
+    h1 { text-align: center; margin-bottom: 2rem; }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill,minmax(var(--card-width),1fr));
+      gap: var(--gap);
+    }
+
+    .card {
+      background: var(--card);
+      border-radius: 8px;
+      overflow: hidden;
+      cursor: pointer;
+      transition: transform .2s, background .2s;
+    }
+    .card:hover {
+      transform: scale(1.04);
+      background: #362351;
+    }
+    .card img {
+      width: 100%;
+      height: 160px;
+      object-fit: cover;
+      display: block;
+    }
+    .card h3 {
+      margin: .7rem .9rem 1rem;
+      font-size: 1rem;
+    }
+
+    #play {
+      position: fixed;
+      inset: 0;
+      background: #000;
+      display: none;
+      flex-direction: column;
+      z-index: 1000;
+    }
+    #play menu {
+      background: #221631;
+      padding: .5rem;
+      display: flex;
+      align-items: center;
+      gap: .5rem;
+    }
+    #play button {
+      border: none;
+      padding: .4rem .8rem;
+      background: var(--highlight);
+      color: #fff;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    #play iframe {
+      flex: 1;
+      border: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    .hide-cursor {
+      cursor: none;
+    }
   </style>
 </head>
 <body>
-  <h1>Pick a game</h1>
-  <div class="grid" id="grid"></div>
+  <aside class="sidebar">
+    <img src="logo-placeholder.png" alt="Logo" class="logo">
+    <h2>Categories</h2>
+    <div class="category-list" id="categories"></div>
+  </aside>
+
+  <main>
+    <h1>Pick a game</h1>
+    <div class="grid" id="grid"></div>
+  </main>
 
   <div id="play">
     <menu>
@@ -33,39 +148,60 @@
   </div>
 
   <script>
-    // 🕹️ This will be replaced automatically
     const games = __GAMES__;
-    
+
     const grid = document.getElementById('grid');
-    games.forEach(id => {
-      const img = new Image();
-      img.src = `games/${id}/thumb.png`;
-      img.onerror = () => img.src = `games/${id}/thumb.jpg`;
-      img.loading = 'lazy';
-      img.alt = id;
+    const categoryContainer = document.getElementById('categories');
+    const frame = document.getElementById('frame');
+    const playView = document.getElementById('play');
 
-      const card = document.createElement('div');
-      card.className = 'card';
-      card.appendChild(img);
+    let currentCategory = 'All';
 
-      const h3 = document.createElement('h3');
-      h3.textContent = formatName(id);
-      card.appendChild(h3);
+    // Build category list from game metadata
+    const categories = new Set(['All']);
+    games.forEach(g => categories.add(g.category));
 
-      card.onclick = () => openGame(id);
-      grid.appendChild(card);
+    categories.forEach(cat => {
+      const btn = document.createElement('button');
+      btn.textContent = cat;
+      btn.onclick = () => {
+        currentCategory = cat;
+        document.querySelectorAll('.category-list button').forEach(b => b.classList.remove('active'));
+        btn.classList.add('active');
+        renderGames();
+      };
+      if (cat === 'All') btn.classList.add('active');
+      categoryContainer.appendChild(btn);
     });
+
+    function renderGames() {
+      grid.innerHTML = '';
+      games.filter(g => currentCategory === 'All' || g.category === currentCategory)
+        .forEach(game => {
+          const card = document.createElement('div');
+          card.className = 'card';
+          card.innerHTML = `
+            <img src="games/${game.id}/${game.thumb}" alt="${game.id}">
+            <h3>${formatName(game.id)}</h3>
+          `;
+          card.onclick = () => openGame(game.id);
+          grid.appendChild(card);
+          // count impression
+          updateGameStats(game.id, 'impression');
+        });
+    }
 
     function openGame(id) {
       document.getElementById('title').textContent = formatName(id);
-      document.getElementById('frame').src = `games/${id}/index.html`;
-      document.getElementById('play').style.display = 'flex';
+      frame.src = `games/${id}/index.html`;
+      playView.style.display = 'flex';
       history.pushState({id}, '', `#${id}`);
+      updateGameStats(id, 'open');
     }
 
     function closeGame() {
-      document.getElementById('play').style.display = 'none';
-      document.getElementById('frame').src = 'about:blank';
+      playView.style.display = 'none';
+      frame.src = 'about:blank';
       history.pushState({}, '', location.pathname);
     }
 
@@ -78,15 +214,32 @@
       else closeGame();
     });
 
-    if (location.hash) openGame(location.hash.slice(1));
+    // ⏳ Stats system
+    function updateGameStats(id, type) {
+      const url = `games/${id}/stats.json`;
+      fetch(url)
+        .then(r => r.json())
+        .then(data => {
+          if (type === 'impression') data.impressions++;
+          if (type === 'open') data.opens++;
+          return fetch(url, {
+            method: 'PUT',
+            headers: {'Content-Type':'application/json'},
+            body: JSON.stringify(data)
+          }).catch(()=>{});
+        }).catch(()=>{});
+    }
+
     // Prevent page scroll during gameplay
     window.addEventListener('keydown', function(e) {
       const blockedKeys = ['ArrowUp', 'ArrowDown', ' ', 'Spacebar']; 
-      if (viewer.style.display === 'block' && blockedKeys.includes(e.key)) {
+      if (playView.style.display === 'flex' && blockedKeys.includes(e.key)) {
         e.preventDefault();
       }
     }, false);
 
+    renderGames();
   </script>
 </body>
 </html>
+
