--- a/index.template.html
+++ b/index.template.html
@@ -62,7 +62,38 @@
       overflow-y: auto;
     }
 
-    h1 { text-align: center; margin-bottom: 2rem; }
+    h1 { text-align: center; margin-bottom: 1rem; }
+
+    .viewer {
+      background: black;
+      width: 100%;
+      height: 70vh;
+      margin-bottom: 2rem;
+      border-radius: 10px;
+      overflow: hidden;
+      position: relative;
+      display: none;
+    }
+    .viewer iframe {
+      width: 100%;
+      height: 100%;
+      border: 0;
+    }
+    .viewer menu {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      display: flex;
+      gap: 10px;
+    }
+    .viewer button {
+      border: none;
+      padding: .4rem .8rem;
+      background: var(--highlight);
+      color: #fff;
+      border-radius: 4px;
+      cursor: pointer;
+    }
 
     .grid {
       display: grid;
@@ -92,36 +123,6 @@
       font-size: 1rem;
     }
 
-    #play {
-      position: fixed;
-      inset: 0;
-      background: #000;
-      display: none;
-      flex-direction: column;
-      z-index: 1000;
-    }
-    #play menu {
-      background: #221631;
-      padding: .5rem;
-      display: flex;
-      align-items: center;
-      gap: .5rem;
-    }
-    #play button {
-      border: none;
-      padding: .4rem .8rem;
-      background: var(--highlight);
-      color: #fff;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    #play iframe {
-      flex: 1;
-      border: 0;
-      width: 100%;
-      height: 100%;
-    }
-
     .hide-cursor {
       cursor: none;
     }
@@ -136,31 +137,31 @@
 
   <main>
     <h1>Pick a game</h1>
+
+    <div class="viewer" id="viewer">
+      <menu>
+        <button onclick="closeGame()">← Back</button>
+        <button onclick="toggleFullscreen()">⛶ Fullscreen</button>
+      </menu>
+      <iframe id="frame"></iframe>
+    </div>
+
     <div class="grid" id="grid"></div>
   </main>
 
-  <div id="play">
-    <menu>
-      <button onclick="closeGame()">← Back</button>
-      <span id="title"></span>
-    </menu>
-    <iframe id="frame"></iframe>
-  </div>
-
   <script>
     const games = __GAMES__;
-
     const grid = document.getElementById('grid');
     const categoryContainer = document.getElementById('categories');
     const frame = document.getElementById('frame');
-    const playView = document.getElementById('play');
+    const viewer = document.getElementById('viewer');
 
     let currentCategory = 'All';
+    let playingId = null;
 
-    // Build category list from game metadata
+    // Build category list
     const categories = new Set(['All']);
     games.forEach(g => categories.add(g.category));
-
     categories.forEach(cat => {
       const btn = document.createElement('button');
       btn.textContent = cat;
@@ -186,35 +187,37 @@
           `;
           card.onclick = () => openGame(game.id);
           grid.appendChild(card);
-          // count impression
           updateGameStats(game.id, 'impression');
         });
     }
 
     function openGame(id) {
-      document.getElementById('title').textContent = formatName(id);
+      playingId = id;
       frame.src = `games/${id}/index.html`;
-      playView.style.display = 'flex';
-      history.pushState({id}, '', `#${id}`);
+      viewer.style.display = 'block';
+      viewer.scrollIntoView({ behavior: 'smooth' });
       updateGameStats(id, 'open');
     }
 
     function closeGame() {
-      playView.style.display = 'none';
       frame.src = 'about:blank';
-      history.pushState({}, '', location.pathname);
+      viewer.style.display = 'none';
+      playingId = null;
+    }
+
+    function toggleFullscreen() {
+      if (!document.fullscreenElement) {
+        viewer.requestFullscreen().catch(err => console.log(err));
+      } else {
+        document.exitFullscreen();
+      }
     }
 
     function formatName(id) {
       return id.replace(/[-_]/g, ' ').replace(/\b\w/g, c => c.toUpperCase());
     }
 
-    window.addEventListener('popstate', () => {
-      if (location.hash) openGame(location.hash.slice(1));
-      else closeGame();
-    });
-
-    // ⏳ Stats system
+    // Stats tracking
     function updateGameStats(id, type) {
       const url = `games/${id}/stats.json`;
       fetch(url)
@@ -230,16 +233,15 @@
         }).catch(()=>{});
     }
 
-    // Prevent page scroll during gameplay
-    window.addEventListener('keydown', function(e) {
-      const blockedKeys = ['ArrowUp', 'ArrowDown', ' ', 'Spacebar']; 
-      if (playView.style.display === 'flex' && blockedKeys.includes(e.key)) {
+    // prevent arrow key scroll when game open
+    window.addEventListener('keydown', (e) => {
+      const blocked = [' ', 'ArrowUp', 'ArrowDown', 'ArrowLeft', 'ArrowRight'];
+      if (viewer.style.display === 'block' && blocked.includes(e.key)) {
         e.preventDefault();
       }
-    }, false);
+    });
 
     renderGames();
   </script>
 </body>
 </html>
-
