deploy: 0f31ce334d2a65af23b8c57d706a2ad03ddeee81

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   </main>
 
   <script>
-    const games = [{"id":"1v1.lol","category":"Uncategorized","thumb":"thumbnail.png"},{"id":"Age Of War","category":"Uncategorized","thumb":"thumbnail.png"},{"id":"Among Us","category":"Uncategorized","thumb":"thumbnail.jpg"},{"id":"Backrooms","category":"Uncategorized","thumb":"thumbnail.jpg"},{"id":"Baldi’s Basics","category":"Uncategorized","thumb":"thumbnail.png"},{"id":"Basket Random","category":"Uncategorized","thumb":""}];
+    const games = [{"id":"1v1.lol","category":"Uncategorized","thumb":"thumbnail.png"},{"id":"Age Of War","category":"Uncategorized","thumb":"thumbnail.png"},{"id":"Among Us","category":"Uncategorized","thumb":"thumbnail.jpg"},{"id":"Backrooms","category":"Uncategorized","thumb":"thumbnail.jpg"},{"id":"Baldi’s Basics","category":"Uncategorized","thumb":"thumbnail.png"}];
     const grid = document.getElementById('grid');
     const categoryContainer = document.getElementById('categories');
     const frame = document.getElementById('frame');
