deploy: 0cf42b405199fa108cab5b777d20f9024e911d3c

--- a/index.html
+++ b/index.html
@@ -341,7 +341,8 @@ function closeGame() {
   currentGameFolder = null;
   startOverlay.style.opacity = '1';
   startOverlay.style.pointerEvents = 'auto';
-  window.location.hash = '';
+  // Reset URL to main page without hash
+  history.pushState({}, '', siteUrl + '/'); 
 }
 
 function toggleFullscreen() {
