--- a/index.html
+++ b/index.html
@@ -92,19 +92,20 @@ button {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
   max-width: 1280px;
   margin: 0 auto 2rem auto;
   background: black;
   border-radius: 10px;
-  overflow: hidden; /* hides anything overflowing inside the viewer */
+  overflow: hidden;
 }
-
 .viewer iframe {
+  width: 100%;
+  height: 100%;
   border: none;
   background: black;
-  aspect-ratio: 16 / 9;
+  aspect-ratio: 16/9;
   object-fit: contain;
-  overflow: hidden; /* Hides the iframe scrollbars */
 }
 
 /* Overlay for Play */
