deploy: bc1eb7e5b8104399b6387e7c047add8905d97129

--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1033412505744705"
-     crossorigin="anonymous"></script>
 <meta charset="UTF-8">
 <title>Arcade</title>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1033412505744705" crossorigin="anonymous"></script>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
+
+:root {
+  --base-font: clamp(12px, 1.2vw, 18px);
+  --thumb-height: clamp(100px, 20vh, 160px);
+  --sidebar-width: clamp(50px, 6vw, 70px);
+}
 
 * { box-sizing: border-box; }
 html, body {
@@ -17,12 +22,13 @@ html, body {
   background: #1c0033;
   font-family: 'Orbitron', sans-serif;
   color: #eee;
-  overflow: hidden; /* No global scrollbars - handled by content/sidebar */
+  overflow: hidden;
+  font-size: var(--base-font);
 }
 
 /* Sidebar */
 #sidebar {
-  width: 60px;
+  width: var(--sidebar-width);
   background: #330066;
   padding: 1rem 0;
   height: 100vh;
@@ -43,7 +49,7 @@ html, body {
   border-radius: 4px;
   transition: 0.3s ease;
   white-space: nowrap;
-  font-size: 16px;
+  font-size: 1em;
   opacity: 0;
   transform: translateY(5px);
 }
@@ -59,8 +65,8 @@ html, body {
   padding: 1rem;
   overflow-y: auto;
   overflow-x: hidden;
-  margin-left: 60px;
-  width: calc(100% - 60px);
+  margin-left: var(--sidebar-width);
+  width: calc(100% - var(--sidebar-width));
   transition: margin-left 0.3s;
   height: 100vh;
 }
@@ -74,13 +80,14 @@ html, body {
   margin: 0 auto 0.5rem auto;
   padding: 0.5rem;
   visibility: hidden;
+  font-size: 1.2em;
 }
 button {
   padding: 0.4rem 0.8rem;
   border: none;
   border-radius: 6px;
   cursor: pointer;
-  font-size: 14px;
+  font-size: 1em;
 }
 #backBtn { background: #ff99ff; color: black; }
 #fullscreenBtn { background: #cc66ff; color: black; }
@@ -88,22 +95,23 @@ button {
 /* Game Viewer */
 .viewer {
   position: relative;
-  display: none; /* use 'flex' to show when needed */
+  display: none;
   justify-content: center;
   align-items: center;
   width: 100%;
   max-width: 1280px;
   margin: 0 auto 2rem auto;
-  background: transparent; /* transparent background */
+  background: transparent;
   border-radius: 10px;
-  overflow: hidden; /* prevents scrollbars */
+  overflow: hidden;
+  transform: scale(1);
+  transform-origin: top center;
 }
 
-/* Maintain fixed aspect ratio with padding trick */
 .viewer::before {
   content: "";
   display: block;
-  padding-top: 56.25%; /* 16:9 ratio (9/16 = 0.5625) */
+  padding-top: 56.25%; /* 16:9 */
 }
 
 .viewer iframe {
@@ -113,11 +121,10 @@ button {
   width: 100%;
   height: 100%;
   border: none;
-  background: transparent; /* ensures transparency if supported */
-  object-fit: contain; /* keeps content inside without stretching */
-  overflow: hidden; /* prevent iframe scrollbars */
+  background: transparent;
+  object-fit: contain;
+  overflow: hidden;
 }
-
 
 /* Overlay for Play */
 #startOverlay {
@@ -133,19 +140,19 @@ button {
   transition: opacity 0.5s ease;
 }
 #startOverlay img {
-  width: 300px;
+  width: clamp(200px, 40vw, 300px);
   max-width: 80%;
   border-radius: 10px;
   box-shadow: 0 0 20px #ff99ff;
 }
 #startOverlay h1 {
   margin: 0;
-  font-size: 2rem;
+  font-size: clamp(1.5rem, 2.5vw, 3rem);
   color: #fff;
 }
 #startButton {
   padding: 0.8rem 2rem;
-  font-size: 1.2rem;
+  font-size: clamp(1rem, 1.5vw, 1.5rem);
   background: #ff99ff;
   color: black;
   border: none;
@@ -167,7 +174,7 @@ button {
 }
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(clamp(140px, 18vw, 220px), 1fr));
   gap: 1rem;
   justify-content: center;
 }
@@ -185,18 +192,28 @@ button {
 .card:hover { transform: scale(1.05); background: #660099; }
 .thumb {
   width: 100%;
-  height: 140px;
+  height: var(--thumb-height);
   object-fit: cover;
   margin-bottom: 0.5rem;
   border-radius: 6px;
   background: #330033;
 }
 
-/* Hide Scrollbar visually */
+/* Transparent More Card */
+.card.more {
+  background: rgba(255, 255, 255, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  color: #ffccff;
+}
+
+/* Scrollbar */
 ::-webkit-scrollbar { width: 8px; }
 ::-webkit-scrollbar-thumb { background: #660099; border-radius: 4px; }
 
-/* DMCA Link */
+/* DMCA */
 #dmcaLink {
   position: fixed;
   bottom: 10px;
@@ -210,10 +227,7 @@ button {
   z-index: 10000;
   transition: 0.2s;
 }
-#dmcaLink:hover {
-  background: #ff99ff;
-  color: black;
-}
+#dmcaLink:hover { background: #ff99ff; color: black; }
 </style>
 </head>
 <body>
@@ -225,6 +239,7 @@ button {
     <img src="assets/logo.png" alt="Logo">
   </header>
   <ul id="categoryList">
+    <li onclick="filterCategory('Recently Played')">Recently Played</li>
     <li onclick="filterCategory('All Games')">All Games</li><li onclick="filterCategory('Shooter')">Shooter</li><li onclick="filterCategory('Uncategorized')">Uncategorized</li>
   </ul>
 </div>
@@ -237,6 +252,7 @@ button {
     <button id="fullscreenBtn" onclick="toggleFullscreen()">⛶ Fullscreen</button>
   </div>
 
+  <!-- Viewer -->
   <div class="viewer" id="viewer">
     <div id="startOverlay">
       <img id="startThumb" src="" alt="Game Thumbnail">
@@ -246,6 +262,13 @@ button {
     <iframe id="gameFrame" src=""></iframe>
   </div>
 
+  <!-- Recently Played (empty, JS fills it) -->
+  <div class="category" data-category="Recently Played" id="recentlyPlayedSection" style="display:none;">
+    <h2 onclick="filterCategory('Recently Played')">Recently Played</h2>
+    <div class="grid" id="recentlyPlayedGrid"></div>
+  </div>
+
+  <!-- All Categories -->
   
     <div class="category" data-category="All Games">
       <h2 onclick="filterCategory('All Games')">All Games</h2>
@@ -378,7 +401,48 @@ const controls = document.getElementById('controls');
 const startOverlay = document.getElementById('startOverlay');
 const startThumb = document.getElementById('startThumb');
 const startName = document.getElementById('startName');
+const recentlyPlayedGrid = document.getElementById('recentlyPlayedGrid');
 let currentGameFolder = null;
+
+const MAX_RECENT = 12;
+
+function loadRecentlyPlayed() {
+  const list = JSON.parse(localStorage.getItem('recentlyPlayed') || '[]');
+  updateRecentlyPlayedUI(list);
+}
+
+function saveRecentlyPlayed(game) {
+  let list = JSON.parse(localStorage.getItem('recentlyPlayed') || '[]');
+  list = list.filter(g => g.folder !== game.folder);
+  list.unshift(game);
+  if (list.length > MAX_RECENT) list = list.slice(0, MAX_RECENT);
+  localStorage.setItem('recentlyPlayed', JSON.stringify(list));
+  updateRecentlyPlayedUI(list);
+}
+
+function updateRecentlyPlayedUI(list) {
+  recentlyPlayedGrid.innerHTML = '';
+  if (list.length === 0) {
+    document.getElementById('recentlyPlayedSection').style.display = 'none';
+    return;
+  }
+  document.getElementById('recentlyPlayedSection').style.display = 'block';
+
+  list.forEach(g => {
+    const card = document.createElement('div');
+    card.className = 'card';
+    card.onclick = () => prepareGame(encodeURIComponent(g.folder), encodeURIComponent(g.name), g.thumb);
+    card.innerHTML = `<img class="thumb" src="${g.thumb}" alt="${g.name}"><div>${g.name}</div>`;
+    recentlyPlayedGrid.appendChild(card);
+  });
+
+  // Three dots card
+  const moreCard = document.createElement('div');
+  moreCard.className = 'card more';
+  moreCard.textContent = '⋯';
+  moreCard.onclick = () => filterCategory('Recently Played');
+  recentlyPlayedGrid.appendChild(moreCard);
+}
 
 function prepareGame(folderEncoded, nameEncoded, thumbSrc) {
   const folder = decodeURIComponent(folderEncoded);
@@ -395,6 +459,9 @@ function prepareGame(folderEncoded, nameEncoded, thumbSrc) {
   window.location.hash = '#/game/' + folderEncoded;
   filterCategory('All Games');
   document.getElementById('content').scrollTop = 0;
+
+  // Save to recently played
+  saveRecentlyPlayed({ folder, name, thumb: thumbSrc });
 }
 
 function startGame() {
@@ -426,14 +493,15 @@ function filterCategory(cat) {
   allCategories.forEach(c => {
     if (cat === 'All Games') {
       c.style.display = (c.getAttribute('data-category') === 'All Games') ? 'block' : 'none';
+      document.getElementById('recentlyPlayedSection').style.display = recentlyPlayedGrid.children.length ? 'block' : 'none';
     } else {
       c.style.display = (c.getAttribute('data-category') === cat) ? 'block' : 'none';
     }
   });
 }
 
-// Default category on load
 filterCategory('All Games');
+loadRecentlyPlayed();
 
 window.addEventListener('load', handleRouting);
 window.addEventListener('hashchange', handleRouting);
